fix overflow

--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,15 @@ body {
     overflow: hidden;
 }
 
+div {
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+}
+
 .overlay {
     background: url(assets/pictures/drawing.svg) no-repeat center;
     background-size: cover;
-    height: 100vh;
-    width: 100vw;
     position: fixed;
     z-index: 100;
     pointer-events: none;
